# helperium

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLA.md  GENERATION.md  MONITORING.md  Makefile  README.md  README_RU.md  TASK.md  biome.json  conftest.py  docker-compose.yml  go.work  go.work.sum  main.py  pyproject.toml  pyrightconfig.json  server.py
.github/workflows/: ci.yml
.pi/: APPEND_SYSTEM.md  README-SETUP.md
admin-dashboard/: .htmlvalidate.json  Dockerfile  README.md  build.sh  go.mod  go.sum  mewt.toml  package-lock.json  package.json  tsconfig.json
admin-dashboard/partials/: app-close.html  app-open.html  head.html  login.html  modals.html  tail.html
admin-dashboard/scripts/: check-stale-binary.sh  run-tests.sh
admin-dashboard/src/: globals.d.ts  i18n.ts  index.ts  types.ts
admin-dashboard/tests/: api-client.js  api-registry.json  api.test.js  contract.test.js  i18n.test.ts  (+5 more)
agent-db/: README.md  pyproject.toml
agent-db/agent_db/: cli.py
agent-db/agent_db/core/: __init__.py
agent-tutor-go/: go.mod
agent-tutor-sdk/: pyproject.toml
agent-tutor-sdk/src/agent_tutor_sdk/: __init__.py  data_client.py  seed_models.py
agent-tutor-sdk/src/agent_tutor_sdk/api/: models.py
agent-tutor-sdk/src/agent_tutor_sdk/contracts/: __init__.py
agent-tutor-sdk/src/agent_tutor_sdk/db/: __init__.py  database.py  models.py
agent-tutor-sdk/src/agent_tutor_sdk/rag/: __init__.py  client.py  models.py
agent-tutor-sdk/tests/unit/: test_agent_models.py  test_client.py  test_contracts_drift.py  test_data_client.py  test_database.py  test_entity_model.py  test_seedgen_validation.py
api-service/: Dockerfile  README.md  pyproject.toml
api-service/embed/: README.md  embed.css  embed.js
api-service/src/api_service/: abuse_live.py  agent_repository.py  agent_store.py  anti_abuse.py  backlog.py  error_messages.py  guardrails.py  http_models.py  log_config.py  pricing.py  prometheus_metrics.py  provider_store.py  server.py
api-service/src/api_service/agent/: __init__.py  conversation.py  event_stream.py  fallback_handler.py  legacy_adapters.py  litellm_provider.py  llm_client.py  llm_handler.py  mcp_client.py  middlewares.py  models.py  orchestrator.py  pipeline.py  prompts.py  protocols.py  provider_pool.py  scripted_provider.py  stages.py  token_estimator.py  tool_handler.py  tool_parser.py  turn_context.py  types.py
api-service/src/api_service/audio/: __init__.py  stt_engine.py  tts_engine.py  voice_config.py
api-service/src/api_service/tests/unit/: test_agent_store.py  test_agent_store_encryption.py  test_backlog.py  test_cors_security.py  test_embed_mount.py  test_embed_security.py  test_event_payload.py  test_guardrails.py  test_message_role.py  test_openapi_api.py  test_rate_limiter.py  test_routes_exist.py  test_voice_config_persistence.py  test_voice_llm_config.py
api-service/src/api_service/tests/unit/agent/: helpers.py  test_error_flow.py  test_event_stream.py  test_fallback_client.py  test_fallback_handler.py  test_llm_client.py  test_llm_handler.py  test_mcp_client.py  test_mcp_initialize_timeout.py  test_middlewares.py  test_orchestrator_e2e.py  test_orchestrator_fixes.py  test_prioritized_client.py  test_stages.py  test_token_estimator.py  test_tool_handler.py  test_tool_parser_extensive.py  test_turn_context.py
data-service/: .gitignore  Dockerfile  README.md  go.mod  go.sum  mewt.toml
db/: connection.py  database.py  fixtures.py  models.py  schema.py
demo/: __init__.py  api.py  data.py  mcp_bridge.py  ollama_client.py  settings.py  web.py
doc/: FINAL_TASK.md  NEW_ROADMAP.md  PENTEST-CHEK.md  ROADMAP.md  RUNBOOK.md  api-flow.md
fixtures/: README.md  agent_generate.py  document_generator.py  generate.py  ingest.py  pyproject.toml
fixtures/src/fixtures/: agent_generate.py  catalog.py  document_generator.py  generate.py  ingest.py  rag_tools.py
helperium-go/: go.mod  go.sum
helperium-sdk/: pyproject.toml
helperium-sdk/src/helperium_sdk/: __init__.py  data_client.py  models.py  seed_models.py  tracing.py
helperium-sdk/src/helperium_sdk/api/: models.py
helperium-sdk/src/helperium_sdk/rag/: __init__.py  client.py  models.py
helperium-sdk/tests/unit/: test_agent_models.py  test_client.py  test_data_client.py  test_entity_model.py  test_seedgen_validation.py
mcp-gateway/: Dockerfile  README.md  go.mod  go.sum  mewt.toml
mcp_server/: __init__.py  pyproject.toml  server.py  tools_rag.py  tools_via_http.py
mcp_server/tests/unit/: test_discipline_tools.py  test_grade_tools.py  test_student_tools.py  test_teacher_tools.py
mcp_server/tools/: disciplines.py  grades.py  rag.py  student.py  teacher.py
rag/: Dockerfile  README.md  __init__.py  _types.py  admin_http_models.py  chunker.py  client.py  config.py  db.py  documents_schema.py  embeddings.py  http_models.py  interfaces.py  models.py  parser.py  pipeline.py  pyproject.toml  repository.py  service.py  utils.py  vector_store.py
rag/cache/: local.py
rag/chunker/: recursive.py  semantic.py
rag/fixtures/: __init__.py  _material.py  catalog.py  cli_docgen.py  cli_ingest.py  document_generator.py  rag_tools.py  seedgen.py
rag/pipeline/: pipeline.py  repository.py
rag/reranker/: bm25.py
rag/specs/: rag.openapi.yaml
rag/tests/benchmark/: __init__.py  baseline.json  golden_qa.py  test_search_quality.py
rag/tests/integration/: test_concurrent_repository.py  test_e2e_pipeline.py
rag/tests/unit/: test_admin_security.py  test_cache_counters.py  test_cors_security.py  test_litellm_embedding.py  test_openapi_spec.py  test_rag_pipeline.py  test_repository.py  test_search_validation.py  test_service.py  test_vector_store.py
rag/vector_store/: chroma.py  protocol.py
scripts/: .nightly_mutmut.sh  backup.sh  check-admin-contract.sh  dev.sh  extract-frontend-endpoints.js  llm-search-empty.jsonl  split-admin-html.js  split-admin-html.py
specs/: README.md  api.openapi.json  api.openapi.yaml  config.example.json  config.postgres.json  config.schema.json  data-service.openapi.yaml  rag.openapi.yaml
tests/: conftest.py
tools/: disciplines.py  rag.py  student.py
(+329 files in other folders)
