[project]
name = "agent-tutor-workspace"
version = "0.1.0"
readme = "README.md"
description = "AI assistant for the university help site — workspace root"
requires-python = ">=3.12, <3.14"
dependencies = []

# ── Workspace ─────────────────────────────────────────────────────────
[tool.uv.sources]
agent-tutor-sdk = { workspace = true }

[tool.uv.workspace]
members = [
    "agent-tutor-sdk",
    "rag",
    "mcp_server",
    "demo/api",
    "demo/web",
    "fixtures",
]

# ── Dev dependencies ─────────────────────────────────────────────────
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "respx>=0.21.0",
    "freezegun>=1.5.0",
    "ruff>=0.7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "agent-tutor-sdk/tests",
    "rag/tests",
    "mcp_server/tests",
    "demo/api/tests",
]
python_files = "test_*.py"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]



[tool.uv]
index-strategy = "unsafe-first-match"


