[project]
name = "agent-tutor-workspace"
version = "1.1.0"
readme = "README.md"
description = "AI assistant for the university help site - workspace root"
requires-python = ">=3.12, <3.14"
dependencies = [
    "prometheus-client>=0.25.0",
    "prometheus-fastapi-instrumentator>=8.0.2",
    "slowapi>=0.1.10",
    "structlog>=26.1.0",
]

# ── Workspace ─────────────────────────────────────────────────────────
[tool.uv.sources]
agent-tutor-sdk = { workspace = true }
rag = { workspace = true }
api-service = { workspace = true }
demo-web = { workspace = true }

[tool.uv.workspace]
members = [
    "agent-db",
    "agent-tutor-sdk",
    "rag",
    "api-service",
    "demo/web",
]

# ── Dev dependencies ─────────────────────────────────────────────────
[dependency-groups]
dev = [
    "rag[cli]",        # faker, python-docx для agent-rag-ingest/docgen/seedgen
    "rag[pg]",         # psycopg2-binary для RAG с PostgreSQL
    "api-service[pg]",    # psycopg2-binary для API с PostgreSQL
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "respx>=0.21.0",
    "freezegun>=1.5.0",
    "ruff>=0.7.0",
    "pyyaml>=6.0",  # тесты OpenAPI-спецификаций (test_openapi_api.py, test_openapi_spec.py)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "agent-tutor-sdk/tests",
    "rag/tests",
    "api-service/src/api_service/tests",
    "demo/web/tests",
]
python_files = "test_*.py"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]



[tool.uv]
index-strategy = "unsafe-first-match"
