[project]
name = "helperium-workspace"
version = "1.1.0"
license = "MPL-2.0"
readme = "README.md"
description = "AI assistant for the university help site - workspace root"
requires-python = ">=3.12, <3.14"
dependencies = []

[project.optional-dependencies]
rag = [
    "redis>=8.0.1",
]

# ── Workspace ─────────────────────────────────────────────────────────
[tool.uv.sources]
helperium-sdk = { workspace = true }
rag = { workspace = true }
api-service = { workspace = true }
demo-web = { workspace = true }

[tool.uv.workspace]
members = [
    "agent-db",
    "helperium-sdk",
    "rag",
    "api-service",
    "demo/web",
]

# ── Dev dependencies ─────────────────────────────────────────────────
[dependency-groups]
dev = [
    "rag[cli]",        # faker, python-docx для agent-rag-ingest/docgen/seedgen
    "rag[pg]",         # psycopg2-binary для RAG с PostgreSQL
    "api-service[pg]",    # psycopg2-binary для API с PostgreSQL
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "respx>=0.21.0",
    "freezegun>=1.5.0",
    "ruff>=0.7.0",
    "pyyaml>=6.0",  # тесты OpenAPI-спецификаций (test_openapi_api.py, test_openapi_spec.py)
    "fakeredis>=2.36.2",
    "pre-commit>=4.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "helperium-sdk/tests",
    "rag/tests",
    "api-service/src/api_service/tests",
    "demo/web/tests",
]
python_files = "test_*.py"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]




[tool.mutmut]
source_paths = [
    "src/api_service",
]
also_copy = [
    "src/helperium_sdk",
    "src/agent_db",
    "src/demo",
    "embed",
]
pytest_add_cli_args_test_selection = [
    "src/api_service/tests",
]
exclude_dirs = [
    ".git",
    ".venv",
    ".data",
    "mutants",
    "__pycache__",
    "node_modules",
    ".egg-info",
    "specs",
    "docker",
    "scripts",
    "doc",
]
debug = false

[tool.uv]
index-strategy = "unsafe-first-match"
