[project]
name = "agent-db"
version = "0.1.0"
description = "Unified DB/Scenario/Tenant/Seed/Test management for agent-tutor"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "pydantic>=2.8",
    "rich>=13.7",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.23",
]

[project.scripts]
agent-db = "agent_db.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["agent_db"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"