[project]
name = "agent-tutor-sdk"
version = "0.1.1"
description = "Shared SDK for agent-tutor services"
requires-python = ">=3.12, <3.14"
dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_tutor_sdk"]
