[project]
name = "api-service"
version = "1.1.0"
license = "MPL-2.0"
requires-python = ">=3.12, <3.14"
dependencies = [
    "helperium-sdk",
    "litellm>=1.86.2",
    "mcp>=1.0.0",
    "fastapi>=0.137.2",
    "uvicorn[standard]>=0.38.0",
    "starlette>=0.50.0",
    "pydantic>=2.0.0",
    "httpx>=0.28.0",
    "cryptography>=44.0.0",
]

[project.optional-dependencies]
pg = [
    "psycopg2-binary>=2.9.0",
]

[project.scripts]
agent-chat-api = "api_service:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api_service"]
