[project]
name = "fixtures"
version = "0.2.0"
description = "Dev-only CLI tools (agent-ingest, agent-generate)"
requires-python = ">=3.12, <3.14"
dependencies = [
    "agent-tutor-sdk",
    "faker>=20.0.0",
    "python-docx>=1.2.0",
    "pydantic>=2.0.0",
    "httpx>=0.28.0",
]

[project.scripts]
agent-ingest = "fixtures.ingest:main"
agent-generate = "fixtures.agent_generate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fixtures"]
