[project]
name = "helperium-sdk"
version = "1.1.0"
license = "MPL-2.0"
description = "Shared SDK for helperium services"
requires-python = ">=3.12, <3.14"
dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/helperium_sdk"]
