[project]
name = "mcp_server"
version = "0.2.0"
requires-python = ">=3.12, <3.14"
dependencies = [
    "agent-tutor-sdk",
    "mcp[cli]>=1.0.0",
    "fastapi>=0.137.2",
    "uvicorn[standard]>=0.38.0",
    "starlette>=0.50.0",
    "pydantic>=2.0.0",
    "httpx>=0.28.0",
    "psycopg2-binary>=2.9.0",
]

[project.scripts]
agent-tutor = "mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
