[project]
name = "rag"
version = "0.2.0"
requires-python = ">=3.12, <3.14"
dependencies = [
    "agent-tutor-sdk",
    "fastapi>=0.137.2",
    "uvicorn[standard]>=0.38.0",
    "starlette>=0.50.0",
    "pydantic>=2.0.0",
    "httpx>=0.28.0",
    "psycopg2-binary>=2.9.0",
    "sentence-transformers>=5.5.1",
    "chromadb>=1.5.9",
    "docling>=2.0.0",
    "chonkie[semantic]>=1.0.0",
]

[project.scripts]
agent-rag = "rag.service:main"

[tool.uv]
index-strategy = "unsafe-first-match"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
