[project]
name = "rag"
version = "1.1.0"
requires-python = ">=3.12, <3.14"
dependencies = [
    "agent-tutor-sdk",
    "fastapi>=0.137.2",
    "uvicorn[standard]>=0.38.0",
    "starlette>=0.50.0",
    "pydantic>=2.0.0",
    "httpx>=0.28.0",
    "sentence-transformers>=5.5.1",
    "chromadb>=1.5.9",
    "docling>=2.0.0",
    "chonkie[semantic]>=1.0.0",
]

[project.optional-dependencies]
cli = [
    "faker>=20.0.0",
    "python-docx>=1.2.0",
]
pg = [
    "psycopg2-binary>=2.9.0",
]

[project.scripts]
agent-rag = "rag.service:main"
agent-rag-docgen = "rag.fixtures.cli_docgen:main"
agent-rag-ingest = "rag.fixtures.cli_ingest:main"
agent-seedgen = "rag.fixtures.seedgen:main"

[tool.uv]
index-strategy = "unsafe-first-match"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["rag/**", "rag/fixtures/**"]
